; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Exception.c_exception_try_end.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Exception.c_exception_try_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Exception = type { i64 }

@Exception = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"Cello Fatal Error: Exception Buffer Underflow!\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @exception_try_end() #0 {
  %1 = alloca %struct.Exception*, align 8
  %2 = load i32, i32* @Exception, align 4
  %3 = call %struct.Exception* @current(i32 %2)
  store %struct.Exception* %3, %struct.Exception** %1, align 8
  %4 = load %struct.Exception*, %struct.Exception** %1, align 8
  %5 = getelementptr inbounds %struct.Exception, %struct.Exception* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %0
  %9 = load i32, i32* @stderr, align 4
  %10 = call i32 @fprintf(i32 %9, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 (...) @abort() #3
  unreachable

12:                                               ; preds = %0
  %13 = load %struct.Exception*, %struct.Exception** %1, align 8
  %14 = getelementptr inbounds %struct.Exception, %struct.Exception* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %15, -1
  store i64 %16, i64* %14, align 8
  ret void
}

declare dso_local %struct.Exception* @current(i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
